--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sc3-plugins-sonicpi (3.9.0-0) unstable; urgency=low
+
+  * Packaging of Supercollider Plugins 3.9.0 required for Sonic Pi
+
+ -- Team Kano <dev@kano.me>  Wed, 23 May 2018 17:20:00 +0000
+
 sc3-plugins-sonicpi (3.8.0-0) unstable; urgency=low
 
   * Packaging of Supercollider Plugins 3.8.0 required for Sonic Pi
